--- a/test.tex
+++ b/test.tex
@@ -579,8 +579,7 @@ T^{2} = L^{3} = M^{5} = n^{30}
 where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the $5^{th}$ power of its mass. This holic dimension 30 is the touchstone of the Topological axis, from which the gauge bosons are deduced by Bott reductions [19] (Fig. 1).
 
 This is called the Holic Principle, but limited to \textit{the apparent MLT world only}. The Complete Holic
-Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. This is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
-
+Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. This is confirmed by (to 0.56 \%, -0.65 \%, -0.59 \%, -0.32 \%):
 \begin{equation}
 R/\lambdabar_{e} \approx s_4^5 \approx f(26)/6 \approx \Gamma^{28}/5 \approx (2/\delta)^{210}
 \end{equation}
@@ -592,7 +591,7 @@ where $f$ is the inverse strong coupling constant (section 8.3). This  confirms 
 \begin{equation}
  p^{(p^{2})} \sim (a^{2})^{(a^{3})}   
 \end{equation}
-showing a symmetry between basic powers of $a$ and $p$. The consequences of the appearance of $\Gamma$\ in the above equation will appear in section 8.3. 
+showing a symmetry between basic powers of $a$ and $p$.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The special holographic relations}
@@ -604,7 +603,7 @@ The students of the first author realized in 1987 a hologram by scanning a 1 mW 
 
 In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to reexamine the foundation of cosmology. \textit{In the three first minutes, the half-radius of visible Universe was obtained}. After several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university and Paris Academy, this was put in March 1998 in a closed draft in the Acad\'{e}mie des Sciences de Paris, under the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
 
-Strangely enough, when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists holography. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal 1D holography was proposed in the first author's thesis as soon as 1975. 
+Strangely enough, when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists in holography. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal 1D holography was proposed in the first author's thesis as soon as 1975 \cite{Sanchez5}. 
 
 While the standard Holographic Principle is limited to using the Plank area, it is natural to suppose that they are other holographic units. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here four more confirmations. 
 
@@ -1332,9 +1331,11 @@ Two Times''. Phys. Rev. D 58 (1998); hep-th/9803188,
 de Bott''. I. Seminaire Henri Cartan, Tome 12 (1959-1960) no. 2, Expose no. 16,
 p. 1--16.
 
+\bibitem{Grosmann} Grosmann, M. and Meyrueis P. ``Optics and Photonics Applied to Communication and Processing''. SPIE.  Jan 1979.
+
 \bibitem{Sanchez4} Sanchez F. M. ``Holic Principle: The coherence of the Universe`` (Sept 1995), Entelechies, 16th ANPA, 324-344.
 
-\bibitem{Grosmann} Grosmann, M. and Meyrueis P. ``Optics and Photonics Applied to Communication and Processing''. SPIE.  Jan 1979.
+\bibitem{Sanchez5} Sanchez F. M. ``Coh\'{e}rence Temporelle d'ordre sup\'{e}rieur d'un laser d\'{e}clench multimode`. Doctorate Thesis, Orsay, number 1478, p. 11 (1975).
 
 \bibitem{Okun} Okun L.B. ``Photon: history, mass, charge``. Int. Conf. on the Photon, Warsaw University, arXiv:hep-ph/0602036 (2005).
 
