--- a/test.tex
+++ b/test.tex
@@ -630,11 +630,11 @@ calling for further study.
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an holographic
-relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245)$, and the proton radius, identified to $\lambdabar_e/\sqrt{D} \approx 8.7029\cdot 10^{-16}$ m (0.1 \%, -0.1 \% and 87 ppm):
+relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245$, and the proton radius, identified to $\lambdabar_e/\sqrt{D} \approx 8.7029\cdot 10^{-16}$ m (0.1 \%, -0.1 \% and 87 ppm):
 \begin{equation}
 e^{a} \approx 4\pi(R^{\prime}/l_{CMB})^{2} \approx (2\pi /3) (r_p/l_P)^3 \approx \sqrt{3} M_B/m_P
 \end{equation}
-where $M_B = 2M/\sqrt{n}$ is the baryonic mass of the Universe\cite{Sanchez1}. The factor $\sqrt{3}$ implies a new holographic relation (see the 'neutron relation' in section 8.3):
+where $M_B = 2M/\sqrt{n}$ is the baryonic mass of the Universe\cite{Sanchez1}. The factor$\sqrt{3}$ implies a new holographic relation (see the 'neutron relation' in section 8.3):
 \begin{equation}
 4\pi (R/e^a l_P)^2 \approx (4\pi/3)n \approx (4\pi/3)(v\pi^2/4)^3
 \end{equation} 
@@ -657,7 +657,7 @@ Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slig
 
 \subsection{The Cosmic Temperature}
 
-In the gravitational hydrogen molecule model \cite{Sanchez1}, $R$ is defined by the following 1D-2D Special
+In the gravitational hydrogen molecule model \cite{Sanchez1}, the Hubble radius $R$ shows the following 1D-2D Special
 Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the logical extension, the 3D term involving the molecular Hydrogen wavelength:
 \begin{equation}
 2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
@@ -678,7 +678,7 @@ the Lenz-Wyler approximation for the Proton/Electron mass ratio $p_0 = 6\pi^{5}$
 
 \subsection{The Holic Principle and CCO}
 
-The sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius is the Grandcosmos hologram (section 3). Its HB entropy writes: $\pi (R^{\prime}/l_P)^2 = (\pi /2)(R^{\prime}/r_e)^3 $, i.e. with a wrong geometric coefficient. However, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $\sqrt{4/3\delta} \approx 1.17$:
+The sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius is the Grandcosmos hologram (section 3). Its HB entropy writes: $\pi (R^{\prime}/l_P)^2 = (\pi /2)(R^{\prime}/r_e)^3 $, i.e. with a wrong geometric coefficient. However, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $4/3\delta \approx 1.017 $:
 \begin{equation}
 \pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
 \end{equation}
@@ -693,11 +693,11 @@ The deviation of the first relation is very close to that of Eq.11: $R_1^3 \appr
 \begin{equation}
 (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx 3^{1/3}\mu^{35}
 \end{equation}
-showing a quasi-holic form. In accordance with the Hierarchy Principle, the holic form with dimension 210 is completed by the study of the BH entropy of the Grandcosmos: (12 ppm, 100 ppm, 42 ppm):
+showing a quasi-holic form implying $\mu$, the Muon/Electron mass ratio. The complete holic form with dimension 210 is shown by the study of the BH entropy of the Grandcosmos: (12 ppm, 100 ppm, 42 ppm):
 \begin{equation}
 \mu^{210} \approx \pi^{-3/2}(R_{GC}/l_P)^4 \approx 4\pi \tau^{137} (a/137)^2 \approx O_M^9 lnD (p/n)^2
 \end{equation}
-Thus the expected correlation \cite{Witten} \cite{Sanchez5} of $lnD$ with $4\pi$ is confirmed. The existence of a Final Theory based on the Holic Principle (section 6) and the Grandcosmos cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}  
+Ths is a perfect illustration of the Hierarchy Principle. Thus the expected correlation \cite{Witten} \cite{Sanchez6} of $lnD$ with $4\pi$ is confirmed. The existence of a Final Theory based on the Holic Principle (section 6) and the Grandcosmos cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}  
 
 The term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, with values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm, 0.3\%):
 \begin{equation}
