--- a/test.tex
+++ b/test.tex
@@ -739,7 +739,7 @@ The following Koide relation \cite{Koide}, \textit{ which has a mathematical jus
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of the present Particle Physics standard.
-This Koide-Sanchez constant wil lbe precised to ppb precision in section 9.4.
+This Koide-Sanchez constant will be precised to ppb precision in section 9.4.
 
 \subsection{The Eddington's constant 137}
 
@@ -1359,6 +1359,8 @@ treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
+
+\bibitem{Bastin} Bastin T. and Kilmister C.W. ``Combinatorial Physics''. World Scientific (1995).
 
 \bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. {\it https://www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/}.
 
