--- a/test.tex
+++ b/test.tex
@@ -762,7 +762,7 @@ point (H atom-Pion couple) for the super-string value d = 10, and the remarkable
 \begin{equation}
 \sum_{k=7}^{k=0}(4 k + 2) = 2^{7}
 \end{equation}
-So $137 = 2^{7} - 1 + 3 + 7$, i.e. the Combinatorial Hierarchy form \cite{Sanchez1}. But this appears also as 137 = 135 + 2, showing the string dimension 2. Indeed, one obtains the value $a \approx 137.035999119$
+So $137 = 2^{7} - 1 + 3 + 7$, i.e. the Combinatorial Hierarchy form \cite{Bastin}. But this appears also as 137 = 135 + 2, showing the string dimension 2. Indeed, one obtains the value $a \approx 137.035999119$
 compatible with measurement value in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
@@ -791,7 +791,7 @@ Moreover, $v$ appears in the normalised neutron mass $n\approx 1838.6836089(17)$
 \begin{equation}
 n^{1/3}\approx v~(\pi/2)^2  
 \end{equation}
-The small deviation is again attributed to a rationalisation of $\pi$ involving the heavy leaptons: 3,7,16,-(1+$\tau/\mu)^2$.
+The small deviation is attributed to a rationalisation of $\pi$ involving again the heavy leaptons: 3,7,16,-(1+$\tau/\mu)^2$.
 
 Another central constant in the Planck law is the irrational Apery constant $\xi(3) \approx 1.20205691$. The number of photons in a sphere of radius $r$ is:
 $n_{ph}(r) = (4\pi/3) (r/l_{ph})^3$
@@ -826,12 +826,11 @@ as a simplification term. One observes:
 2/\delta = 2a^3/pH \approx (1/2d_{e}) ln(pH)/lna \approx lna/ln\Gamma
 \end{equation}
 With  $w = F/W$, this leads to (22 ppm):$a/\Gamma = \pi /\gamma  \approx w^{\delta}$
-while, with $z = F/Z$ (3 ppm): $137/\Gamma \approx z^{\sqrt{f}/2}$, where $f$ is the Bizouard strong constant precising the inverse 8.44(5) of the standard 'strong coupling constant'\cite{Tanabashi}:
+while, with $z = F/Z$ (3 ppm): $137/\Gamma \approx z^{\sqrt{f}/2}$, Recall that $wz\approx \sqrt{a}$, while $f$ is the Bizouard strong constant precising the inverse 8.44(5) of the standard 'strong coupling constant'\cite{Tanabashi}:
 \begin{equation}
 f = a_w/2\pi (pH)^{3/2} \approx 8.43450
 \end{equation}
-Since $wz\approx \sqrt{a}$ \textit{this seems to be at the kernel of the Particle standard model}, calling for further study. 
-
+ 
 In cosmology, $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmic formula (0.3 ppm):    
 \begin{equation}
 a^{\prime} = ((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
@@ -944,9 +943,8 @@ Now $\Pi_{26}$ is close to the holic term $e^{4 \times 210}$, whose $a^{th}$ roo
 \begin{equation}
 e^{4 \times 210/a} \approx 2e^{2e} \approx H/4 \approx 26 \times (2 \times 26 + 1)/3
 \end{equation}
-The ppb range precision of the last term means clearly that a rationalization of $e^{2e}$ is occurring, where the canonical dimension 26 plays a central role.
 
-Note that $p/g_0$ is close to the above weak mixing angle (0.3 \%. This ratios appears as calculation base in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, and 1 \%:
+Note that $p/g_0$ is close to the above weak mixing angle (0.3 \%). This ratios appears as calculation base in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, and 1 \%:
 \begin{equation}
 O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137}
 \end{equation}
@@ -1045,8 +1043,7 @@ It is an example of \textit{immergence}, i.e. deducing the small from the large,
 \subsection {The Archimedes constant $\pi$ as a calculation base}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
 
-The value of the Topological Function for the main String
- dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f(26) \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1ppm:
+From Eq.(27), the value of the Topological Function for the main String dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f(26) \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1ppm:
 \begin{equation} 
 (p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}
 \end{equation}
@@ -1070,11 +1067,9 @@ The Particle standard model achieved the unification between electromagnetism an
 \begin{equation}
 \lambdabar_e/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
-leading to: 
 \begin{equation}
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
-Moreover:
 \begin{equation}
 aF/\sqrt(pH) = 2\pi afpH/F \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
 \end{equation}
@@ -1096,7 +1091,6 @@ The corresponding Koide-sanchez constant is $p_K \approx 1842.604994$. This lead
 \begin{equation}
 p_K^4/pH \approx (4\pi_a)^4 a \approx (p_GH_e/aH)^4 D^2/n(D+1)
 \end{equation}
-
 \begin{equation}
 n\tau/2 \approx HH_e(D/(D+1))^3 (p_K/p_G)^9
 \end{equation}
