--- a/test.tex
+++ b/test.tex
@@ -662,7 +662,7 @@ Holographic Relation, using the wavelengths of the electron, proton and hydrogen
 \begin{equation}
 2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
 \end{equation}
-The above relation gives $T_{CMB} \approx 2.73 K$. With the measured temperature of the cosmic
+The above relation gives $T_{CMB} \approx 2.73 K$. Moreover it is another dramatic example of $c$-free dimensional analysis \cite{Sanchez1}. With the measured temperature of the cosmic
 background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
 This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin. Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
@@ -1115,8 +1115,6 @@ W \approx 137^{2} \Gamma / 3d_{e}
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-
-
 \textit{The ultimate theory must explain these ppb relations.}
 
 
@@ -1124,11 +1122,11 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-For many, cosmology is the hardiest chapter of physics. This modern, negative, opinion is in fact in contrast with the ancient culture, for which \textit{the cosmology is the first of all sciences, so must be the simplest}. In the original meaning of the word `revolution`, it is a return to the source of Science, the `all is whole number` of Pythagoras. Even the degenerate form of topological or holographic relations, the simplest diophantine equations, the Holic Principle, shows direct pertinence. In particular, it emphasizes the 30 dimensions, which appear decisive in the Topological Axis, and are identified with the sum of 26 string dimensions and 4 of usual space-time.
+For many, cosmology is the hardiest chapter of physics. This modern negative opinion is in fact in contrast with the ancient culture, for which \textit{the cosmology is the first of all sciences, so must be the simplest}. In the original meaning of the word `revolution`, this article is a return to the source of Science, the `all is whole number` of Pythagoras. Even the degenerate form of topological or holographic relations, the simplest diophantine equations, the Holic Principle, shows direct pertinence. In particular, it emphasizes the 30 dimensions, which appear decisive in the Topological Axis, and are identified with the sum of 26 string dimensions and 4 of usual space-time.
 
 The distinction between Length and Time must be emphasized, as
-Poincar\'{e}, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing $c$ =
-1, impeded the fact that the Hubble-Lema\^{i}tre radius $R$ is a trivial length, directly given by the prospective $c$-free dimensional analysis, which gives also the cosmic temperature and the cosmic super-cycle period.
+Poincar\'{e}, the father of 4D Relativity Theory recommended \cite{Poincare3}. Indeed their confusion, by writing $c$ =
+1, impeded the fact that the Hubble-Lema\^{i}tre radius $R$ is a trivial length, directly given by the prospective $c$-free dimensional analysis, which gives also the cosmic temperature (Eq. 37) and the cosmic super-cycle period (Eq. 22).
 
 This means also that the International System must go back to only three fundamental unities,
 Mass, Length and Time.
@@ -1150,9 +1148,7 @@ Thus, \textit{intelligent life must be universal}. The famous Fermi question `wh
 
 The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least parts of these works are very pertinent. This follows the rejection (with the notable exception of Schrodinger) of Eddington\cite{Eddington} himself. Only Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. While he dared to apply the exclusion principle in cosmology, it is the basis of our Single Electron Cosmologic model (section 4.1) which rehabilitates once more his work. Also, fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. Moreover, it seems that no one realizes that the Eddington prediction for the baryon number in the visible Universe is so accurate. Note that many mocked the Eddington Large Number, not to speak of his number 137, completely rehabilitated by the monomonial relations.
 
-However, curiously, Eddington believed in the standard statistical interpretation. Thus, he did not reached the above conclusions. Also, at his epoch the holography was not discovered, and Eddington was far from imagine the Holic Principle. 
-
-
+However, curiously, Eddington believed in the Openhagen statistical interpretation. Thus, he did not reached the above conclusions. Moreover, at his epoch the holography was not discovered: it is a strange fact of Science History that this essential property of wave was so lately discovered\cite{Gabor}. Hence, Eddington was far from imagine the fusion Physics-Arithmetics and the Holic Principle. 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {Conclusions: Cosmic Simplicity at work}
