--- a/test.tex
+++ b/test.tex
@@ -1148,7 +1148,7 @@ Thus, \textit{intelligent life must be universal}. The famous Fermi question `wh
 
 The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least parts of these works are very pertinent. This follows the rejection (with the notable exception of Schrodinger) of Eddington\cite{Eddington} himself. Only Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. While he dared to apply the exclusion principle in cosmology, it is the basis of our Single Electron Cosmologic model (section 4.1) which rehabilitates once more his work. Also, fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. Moreover, it seems that no one realizes that the Eddington prediction for the baryon number in the visible Universe is so accurate. Note that many mocked the Eddington Large Number, not to speak of his number 137, completely rehabilitated by the monomonial relations.
 
-However, curiously, Eddington believed in the Openhagen statistical interpretation. Thus, he did not reached the above conclusions. Moreover, at his epoch the holography was not discovered: it is a strange fact of Science History that this essential property of wave was so lately discovered\cite{Gabor}. Hence, Eddington was far from imagine the fusion Physics-Arithmetics and the Holic Principle. 
+However, curiously, Eddington believed in the Openhagen statistical interpretation. Thus, he did not reached the above conclusions. Moreover, at his epoch the holography was not discovered: it is a strange fact of Science History that this essential property of wave was so lately discovered\cite{Gabor}. However, with his Large Number which fits so well the cosmic neutron population, Eddington anticipated the present fusion Physics-Arithmetic's and its touchstone, the Holic Principle. 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {Conclusions: Cosmic Simplicity at work}
