--- a/test.tex
+++ b/test.tex
@@ -610,7 +610,7 @@ While the standard Holographic Principle is limited to using the Plank area, it 
 \subsection{The graviton and photon masses}
 %Consider for simplicity two identical system of mass m in their basic state. They are each characterized by a stationnary wave, which may be seen as the sum of a diverging wave and a converging one: s + s*, with s = exp(if2p(t-r/c)), where f is the proper frequency mc2/ħ. The second system is characterized by the analogous wave r + r*. Supposing that the vacuum is not empty, an hologram is formed: (s + s*)(r + r*), which includes the resonant terms sr* + s*r. So, the simple presence of two systems create such an inhomogeneity in all the Universe.  Now if the first system has an excess of energy, this means it is receiving an excess signal of the form s*. By diffraction on the above hologram it gives rise to s*(sr* + s*r), with resonant term r*. 
 
-The electromagnetic interaction is not really understood, especially the photon concept \cite{Okun}. The main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. We recall that convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
+The electromagnetic interaction is not really understood, especially the photon concept \cite{Okun}. The main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). This implies directly the non-local hidden variable (Cosmsos), without involving the so-called EPR paradox\cite{Einstein}. Indeed, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. We recall that convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
 \begin{equation}
 \lambdabar_e = \hbar/m_e c = \hbar / m_{gr}C{gr}
 \end{equation}
@@ -1329,7 +1329,9 @@ p. 1--16.
 
 \bibitem{Okun} Okun L.B. ``Photon: history, mass, charge``. Int. Conf. on the Photon, Warsaw University, arXiv:hep-ph/0602036 (2005).
 
-\bibitem{Gabor} Gabor D. A new microscopic principle.Nature 161, 777-778 (1948).
+\bibitem{Einstein} Einstein A., Podolski B. and Rosen N. ``Can Quantum-Mechanical Description of Physical Reality Be Considered Complete``. Phys. Rev. vol 47, p. 777 (1935).    
+
+\bibitem{Gabor} Gabor D. ``A new microscopic principle``. Nature 161, 777-778 (1948).
 
 \bibitem{Marchal} Marchal C. ``Physics with photons of non-zero rest mass``, Proceedings of 28th Intern. Workshop,p. 152-166. Protvino, Russia (2005).
 
@@ -1337,7 +1339,7 @@ p. 1--16.
 Symp. on Black Holes, Membranes, Wormholes, and Superstrings (1992);
 arXiv:hep-th/9209058.
 
-\bibitem{Nikolic} Nikolic, Hrvoje. ``Resolving the black-hole information paradox by
+\bibitem{Nikolic} Nikolic, H. ``Resolving the black-hole information paradox by
 treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 218--221 (2009); arXiv:0905.0538.
 
