--- a/test.tex
+++ b/test.tex
@@ -1148,7 +1148,7 @@ Thus, \textit{intelligent life must be universal}. The famous Fermi question `wh
 
 The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least parts of these works are very pertinent. This follows the rejection (with the notable exception of Schrodinger) of Eddington\cite{Eddington} himself. Only Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. While he dared to apply the exclusion principle in cosmology, it is the basis of our Single Electron Cosmologic model (section 4.1) which rehabilitates once more his work. Also, fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. Moreover, it seems that no one realizes that the Eddington prediction for the baryon number in the visible Universe is so accurate. Note that many mocked the Eddington Large Number, not to speak of his number 137, completely rehabilitated by the monomonial relations.
 
-However, curiously, Eddington believed in the Openhagen statistical interpretation. Thus, he did not reached the above conclusions. Moreover, at his epoch the holography was not discovered: it is a strange fact of Science History that this essential property of wave was so lately discovered\cite{Gabor}. However, with his Large Number which fits so well the cosmic neutron population, Eddington anticipated the present fusion Physics-Arithmetic's and its touchstone, the Holic Principle. 
+However, curiously, Eddington believed in the Openhagen statistical interpretation. Thus, he did not reached the above conclusions. At his epoch the holography was not yet discovered: textit{it is a strange, and revealing, fact of Science History that this essential property of wave propagation was so lately discovered}\cite{Gabor}. However, with his Large Number which fits so well the cosmic neutron population, Eddington anticipated the present fusion Physics-Arithmetic's and its touchstone, the Holic Principle. 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {Conclusions: Cosmic Simplicity at work}
@@ -1158,8 +1158,8 @@ The present article confirms the Topological Axis, which was obtained by the sim
 
 The application of the old direct scientific method, looking for fine tuning between physical parameters lead to a return to the Perfect Cosmological Principle implying a steady-state Cosmos, confirmed by holographic relations. The standard cosmological principle was unduly limited to spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave Cosmic Background, which identifies with the Grandcosmos Frame. Meanwhile, the Kotov period is an absolute clock, the dephasage of coherent oscillations between quasars being ruled by the tachyonic celerity.
 
-The simplest model, the gravitational Hydrogen molecule gives $R$, explaining the 2 factor and
-justifying the elimination of $c$, as in the Haas-Bohr model \cite{Sanchez1}. This corresponds to a Hubble constant 70.790
+The simplest model, the gravitational Hydrogen molecule gives the Hubbe radius $R$, explaining the 2 factor and
+justifying the elimination of $c$, as in the Hydrogen Atom Haas-Bohr model \cite{Sanchez1}. This corresponds to a Hubble constant 70.790
 (km/s)/Megaparsec, consistent with the recent measurement \cite{Bonvin}: 72(3) Megaparsec/(km/s), which
 confirms the direct novea measurement, but disagree (3$\sigma$) with the standard value.
 
@@ -1193,14 +1193,14 @@ cosmology is the basis of United Science.
 they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
 the Holic Principle, which explains why normal space has 3 dimensions.
 \item 5/ The necessity of the Cosmos vasteness, resulting from holographic scanning and the rationalization of $e$ and $\pi$
-\item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constant $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
-\item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter would be simply an anti-phase matter-antimatter oscillation \cite{Sanchez1}.  
+\item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constant $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. There is no need of the so-called 'dark energy'.
+\item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. \textit{The nature of dark matter would be simply an anti-phase matter-antimatter oscillation} \cite{Sanchez1}.  
 \item 8/ The introduction of the Topon in the Holographic Principle justifies at last the $10^{122}$ gap between vacuum energy and that of the visible Universe.
-\item 9/ The grandcosmos is huge, but not infinite, in conformity with the Cosmological Computational Principle.
+\item 9/ The Grandcosmos is huge, but not infinite, in conformity with the Cosmological Computational Principle.
 
 In short, the rediscovered Cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as \textit{simple, unique, permanent, computational,
-deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Computational Science and Biology}.
+deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Computational Science and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably.
 
 
 
@@ -1208,7 +1208,7 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It i
 \section{Predictions}\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
  
-%In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably.
+
 
       This article leads to many predictions, in particular:
 \item 1/  The very large infra-red telescopes will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the imperfect cosmological principle.
@@ -1219,11 +1219,9 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It i
 \item 6/ The Lucas-Lehmer series, in connection with the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
 \item 7/ The Monster group will be connected to the  groups, especially the Suzuki and the Matthieu groups. Also the pariah Janko $J_3$, and the Titts group will reveal a central pertinence.
 \item 8/ The Eddington's Fundamental Theory will be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
-\item 9/ The Moulin systemic approach will be reconsidered.
+\item 9/ The Combinatorial Hierarchy \cite{Bastin} and Moulin systemic approach\cite{Moulin} will be reconsidered.
 \end{itemize}
 
-\section*{Acknowledgements}
-The authors thank helpful discussions with Thiebault Moulin, Sir Michael Atiyah, Christian Marchal and Anatole Khelif. 
 %
 \begin{flushright}\footnotesize
 Submitted on April 1st, 2019 / Accepted on April 6th, 2019
